samples/_failures_safe/1761206568_9031fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4d5fe51.c: In function ‘main’:
./samples/SAFE/__tmp_f4d5fe51.c:174:16: error: missing terminating " character
  174 |         printf("Failed to read second matrix\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f4d5fe51.c:174:9: error: expected expression at end of input
  174 |         printf("Failed to read second matrix\n
      |         ^~~~~~
./samples/SAFE/__tmp_f4d5fe51.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4d5fe51.c:174:9: error: expected declaration or statement at end of input
